tcw3/designer/tests/bad/objinit_field_dupe.tcwdl
pub comp crate::Comp1 {
    const wm: tcw3_pal::Wm { pub set; } = || unreachable!();
    prop field: u32;
}
pub comp crate::Comp2 {
    const comp1 = crate::Comp1::new! {
        // `Comp1::field` is specified twice
        prop field = 42;
        //~^ ERROR Too many initializers for the field `field`
        prop field = 42;
    };
}
